# keion

./: .env.example  .gitignore  Dockerfile  README.md  bootstrap.sh  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: code-quality.yml  dependency-check.yml  security.yml  test.yml
src/: main.py
src/keion/: __init__.py  music_cog.py
src/keion/cogs/: __init__.py  music.py
src/keion/cogs/music/: __init__.py  cog.py  player_manager.py  playlist_manager.py  voice_manager.py
src/keion/resources/: messages.json
src/keion/utils/: __init__.py  audio.py  cache.py  constants.py  embed.py  logging.py  musicbrainz_client.py  spotify_client.py
src/keion/web/: app.py  utils.py
src/keion/web/routes/: api.py  pages.py
src/keion/web/static/css/: main.css
src/keion/web/static/js/: main.js
src/keion/web/templates/: base.html  index.html
src/keion/web/templates/components/: players.html  stats.html
tests/: __init__.py
tests/cogs/music/: test_cog.py  test_player_manager.py  test_playlist_manager.py
tests/utils/: test_embed.py
tests/web/: test_api.py  test_pages.py  test_utils.py
